# rustvideoplatform-indexer

./: Cargo.toml  Dockerfile  README.md  config.example.json  setup_trigger.sql
.github/workflows/: docker-image.yml
src/: cache.rs  config.rs  db.rs  listener.rs  main.rs  meilisearch.rs  model.rs  sitemap.rs  sprite.rs  sync.rs
