[package]
name = "rustvideoplatform-indexer"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
meilisearch-sdk = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
